perfil.html updated
Form created

--- a/web/perfil.html
+++ b/web/perfil.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Tu Restaurante en Casa</title>
+    <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -77,6 +78,73 @@
 	</section>
 
 
+    <section class="ftco-section ftco-no-pt ftco-no-pb" style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
+		<div class="container">
+            <div class="container" style="padding-top: 60px;">
+                <h1 class="page-header">Edit Profile</h1>
+                <div class="row">
+                  <!-- left column -->
+                  <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="text-center">
+                      <img src="https://miro.medium.com/max/3150/0*6cv_DLEALbRDYAAh.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+                      <h6>Upload a different photo...</h6>
+                      <input type="file" class="text-center center-block well well-sm">
+                    </div>
+                  </div>
+                  <!-- edit form column -->
+                  <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
+                    <h3>Personal info</h3>
+                    <form class="form-horizontal" role="form">
+                      <div class="form-group">
+                        <label class="col-md control-label">Nombre:</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="Micael" type="text">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md control-label">Apellidos:</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="Gallego" type="text">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md control-label">Correo electrónico:</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="micael.gallego@urjc.es" type="text">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md control-label">Teléfono</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="612 17 18 72" type="text">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md control-label">Contraseña:</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="11111122333" type="password">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md control-label">Confirmar contraseña:</label>
+                        <div class="col-md-8">
+                          <input class="form-control" value="11111122333" type="password">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="col-md-3 control-label"></label>
+                        <div class="col-md-8">
+                          <input class="btn btn-primary" value="Save Changes" type="button">
+                          <span></span>
+                          <input class="btn btn-default" value="Cancel" type="reset">
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </section>
 
 
     <footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
