add_food.html created
Page for the admin to add food has been added.
Acces to this page has also been added to the page carta.html

--- a/web/carta.html
+++ b/web/carta.html
@@ -83,6 +83,7 @@
 				<div class="col-md-7 text-center heading-section ftco-animate">
 					<span class="subheading">Especialidades</span>
 					<h2 class="mb-4">Tu Menú</h2>
+					<a href="add_food.html" class="btn btn-primary btn-sm">Añadir Plato</a>
 				</div>
 			</div>
 			<div class="row">
