--- a/web/equipo.html
+++ b/web/equipo.html
@@ -44,6 +44,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
+			<a href="index.html"><img src="images/logo.png" style="border: 1px solid rgba(0, 0, 0, 0);background-color: rgba(255, 0, 0, 0)"; height="64" width="64" class="logo img-circle img-thumbnail" alt="logo"></a>
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menú
@@ -94,7 +95,7 @@
 							<h3>Javier Méndez</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>Solo tengo un objetivo, llevar comidad desde mi cocina hasta tu puerta.</p>
+								<p>Solo tengo un objetivo, llevar comida desde mi cocina hasta tu puerta.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
