--- a/web/perfil.html
+++ b/web/perfil.html
@@ -45,6 +45,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
+			<a href="index.html"><img src="images/logo.png" style="border: 1px solid rgba(0, 0, 0, 0);background-color: rgba(255, 0, 0, 0)"; height="64" width="64" class="logo img-circle img-thumbnail" alt="logo"></a>
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menú
