--- a/web/carta.html
+++ b/web/carta.html
@@ -47,7 +47,7 @@
 			<a href="index.html"><img src="images/logo.png" style="border: 1px solid rgba(0, 0, 0, 0);background-color: rgba(255, 0, 0, 0)"; height="64" width="64" class="logo img-circle img-thumbnail" alt="logo"></a>
 			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menú
+				<span class="oi oi-menu"></span> Menu
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
@@ -71,8 +71,8 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Menú</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Menu <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-2 bread">Carta</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carta <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -83,7 +83,7 @@
 			<div class="row justify-content-center mb-5 pb-2">
 				<div class="col-md-7 text-center heading-section ftco-animate">
 					<span class="subheading">Especialidades</span>
-					<h2 class="mb-4">Tu Menú</h2>
+					<h2 class="mb-4">Nuestra Carta</h2>
 					<a href="add_food.html" class="btn btn-primary btn-sm">Añadir Plato</a>
 				</div>
 			</div>
@@ -101,7 +101,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -115,7 +115,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -129,7 +129,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -143,7 +143,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -157,7 +157,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -171,7 +171,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -185,7 +185,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -199,7 +199,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -223,7 +223,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -237,7 +237,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -251,7 +251,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -265,7 +265,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -279,7 +279,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -293,7 +293,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -307,7 +307,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -321,7 +321,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -345,7 +345,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -359,7 +359,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -373,7 +373,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -387,7 +387,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -401,7 +401,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -415,7 +415,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -440,7 +440,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -454,7 +454,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -468,7 +468,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -482,7 +482,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -496,7 +496,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -520,7 +520,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -534,7 +534,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -548,7 +548,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -562,7 +562,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -576,7 +576,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -590,7 +590,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -604,7 +604,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -618,7 +618,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -642,7 +642,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -656,7 +656,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -670,7 +670,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -684,7 +684,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -698,7 +698,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -712,7 +712,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
@@ -726,7 +726,7 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
-										<span class="price">$29</span>
+										<span class="price">19€</span>
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
