pagar.html modified and small fixes
- Added forms so the user will be able to introduce his or her personal and address information

- Fixed some minor things like some links and put the logo image to all pages

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <title>Tu Restaurante En Casa</title>
+	<title>Tu Restaurante en Casa</title>
+    <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
