--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-	<title>Taste.it - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Tu Restaurante en Casa</title>
+    <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -113,10 +114,6 @@
 		</div>
 	</section>
 
-
-
-	
-
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
 		<div class="container">
 			<div class="row d-flex">
@@ -145,7 +142,7 @@
 			<div class="row py-2">
 				<div class="col-md-12 text-center">
 					<h2>Te Hacemos Comida Sana &amp; Deliciosa</h2>
-					<a href="menu.html" class="btn btn-white btn-outline-white">Pide ya</a>
+					<a href="carta.html" class="btn btn-white btn-outline-white">Pide ya</a>
 				</div>
 			</div>
 		</div>
