--- a/web/pagar.html
+++ b/web/pagar.html
@@ -74,14 +74,79 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">Paga tu Compra</h1>
+					<h1 class="mb-2 bread">Paga tu Pedido</h1>
 					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="carro.html">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<br>
+
+	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
+		<div class="container">
+			<form role="form">
+				<h2><b>Datos personales:</b></h2>
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="form-group">
+							<label for="email">Nombre:</label>
+							<input class="form-control" id="name" placeholder="Introduce tu nombre">
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="form-group">
+							<label for="email">Apellidos:</label>
+							<input class="form-control" id="surname" placeholder="Introduce tus apellidos">
+						</div>
+					</div>
+				</div>
+				<br>
+				<h2><b>Datos del lugar de envío:</b></h2>
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="form-group">
+							<label for="email">Dirección:</label>
+							<input class="form-control" id="direction" placeholder="Introduce tu dirección">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-2">
+						<div class="form-group">
+							<label for="email">Código Postal:</label>
+							<input class="form-control" id="cp" placeholder="CP">
+						</div>
+					</div>
+					<div class="col-lg-5">
+						<div class="form-group">
+							<label for="email">Localidad:</label>
+							<input class="form-control" id="town" placeholder="Localidad">
+						</div>
+					</div>
+					<div class="col-lg-5">
+						<div class="form-group">
+							<label for="email">País:</label>
+							<input class="form-control" id="country" placeholder="País">
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="form-group">
+							<label for="pwd">Número de teléfono:</label>
+							<input type="tel" class="form-control" id="tel" placeholder="Introduce tu número de teléfono">
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+	</section>
+
+	<br>
     <br>
+
     <section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">  
         <div class="container">
             <div class="row align-items-center justify-content-center">
