--- a/web/perfil.html
+++ b/web/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<title>Tu Restaurante en Casa</title>
     <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
