"perfil.html" upgraded.
- Some tabs added.
- Some data updated.
- Some errors fixed.

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -89,17 +89,17 @@
       <div class="w-100"></div>
       <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Dirección:</span> <br>198 West 21th Street, Suite 721 New York NY 10016</p>
+         <p><span>Dirección:</span> <br>Calle Tulipán, s/n, 28933 Móstoles, Madrid</p>
        </div>
      </div>
      <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Teléfono:</span> <br><a href="tel://1234567920">+ 1235 2355 98</a></p>
+         <p><span>Teléfono:</span> <br><a href="tel://914889393">+34 914 88 93 93</a></p>
        </div>
      </div>
      <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Email:</span> <br><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+         <p><span>Email:</span> <br><a href="mailto:info@yoursite.com">contacto@turestauranteencasa.com</a></p>
        </div>
      </div>
    </div>
@@ -107,9 +107,7 @@
 </section>
  <div class="container">
   <br>
-<center><iframe
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194347.38440686226!2d-3.819621453545616!3d40.43813108092162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1614070828627!5m2!1ses!2ses"
-  width="1100" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center><br>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3041.295215567742!2d-3.879071784606537!3d40.33579667937471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418e7adf68f543%3A0x841755428455a90b!2sUniversidad%20Rey%20Juan%20Carlos!5e0!3m2!1ses!2ses!4v1614364821386!5m2!1ses!2ses" width="1100" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center><br>
 </div>
 
 <footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
