--- a/web/pagar.html
+++ b/web/pagar.html
@@ -102,7 +102,7 @@
 					</div>
 				</div>
 				<br>
-				<h2><b>Datos del lugar de envío:</b></h2>
+				<h2><b>Datos de dirección de envío:</b></h2>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="form-group">
