--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
+					<li class="nav-item active"><a href="index.html" class="nav-link">Principal</a></li>
 					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
 					<li class="nav-item"><a href="carta.html" class="nav-link">Carta</a></li>
 					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
