--- a/web/carta.html
+++ b/web/carta.html
@@ -102,12 +102,16 @@
 										<h3>Beef Roast Source</h3>
 									</div>
 									<div class="one-forth">
+										<div><a href="carro.html" class="btn btn-primary btn-sm">PEDIR</a></div>
 										<span class="price">19€</span>
+										
 									</div>
 								</div>
 								<p><span>Meat</span>, <span>Potatoes</span>, <span>Rice</span>, <span>Tomatoe</span></p>
 							</div>
+
 						</div>
+
 						<div class="menus d-flex ftco-animate">
 							<div class="menu-img img" style="background-image: url(images/breakfast-2.jpg);"></div>
 							<div class="text">
