--- a/web/pagar.html
+++ b/web/pagar.html
@@ -81,12 +81,11 @@
 		</div>
 	</section>
 
-	<br>
-
-	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">
+	<section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt" style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
+		<br>
 		<div class="container">
 			<form role="form">
-				<h2><b>Datos personales:</b></h2>
+				<h2 style="color: aliceblue;"><b>Datos personales:</b></h2>
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="form-group">
@@ -102,7 +101,7 @@
 					</div>
 				</div>
 				<br>
-				<h2><b>Datos de dirección de envío:</b></h2>
+				<h2 style="color: aliceblue;"><b>Datos de dirección de envío:</b></h2>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="form-group">
@@ -142,11 +141,9 @@
 				</div>
 			</form>
 		</div>
+		<br>
 	</section>
-
 	<br>
-    <br>
-
     <section class="ftco-section ftco-wrap-about ftco-no-pb ftco-no-pt">  
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -199,14 +196,14 @@
                         <h4 class="text-right">Total a pagar: <strong>50.00€</strong></h4>
                     </div>
                     <br>
-                    <a href="#" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
+                    <a href="pagar.html" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
                 </div>
             </div>
         </div>
-    </section>  
-
-    <br>
+    </section> 
     
+	<br>
+
 	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
