--- a/web/perfil.html
+++ b/web/perfil.html
@@ -81,7 +81,7 @@
 
     <section class="ftco-section ftco-no-pt ftco-no-pb" style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
 
-		<div class="navbar-default" id="ftco-nav">
+	</br><div class="navbar-default" id="ftco-nav">
 			<ul id="infoPerfil" class="nav ml-auto nav-pills nav-fill">
 				<li role="presentation" class="nav-item"><a class="nav-link active" href="#editar">Editar datos</a></li>
 				<li role="presentation" class="nav-item"><a class="nav-link" href="#platos">Platos recomendados</a></li>
@@ -115,6 +115,12 @@
 									<label class="col-md control-label">Apellidos:</label>
 									<div class="col-md-8">
 										<input class="form-control" value="Doe" type="text">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-md control-label">Alias:</label>
+									<div class="col-md-8">
+										<input class="form-control" value="johndoe" type="text">
 									</div>
 								</div>
 								<div class="form-group">
