--- a/web/registro.html
+++ b/web/registro.html
@@ -98,6 +98,11 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
+										<input type="username" class="form-control" placeholder="Alias">
+									</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
 										<input type="email" class="form-control" placeholder="Correo electrónico">
 									</div>
 								</div>
@@ -132,7 +137,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="email" class="form-control" placeholder="Correo electrónico">
+										<input type="username" class="form-control" placeholder="Alias">
 									</div>
 								</div>
 								<div class="col-md-12">
