Header and footer added
- Header and footer added in app.component and index.html w/ changes in mustache
- images and (some) js added in assets/

--- a/frontend/sample-project-phase4/src/index.html
+++ b/frontend/sample-project-phase4/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ejem0</title>
+  <title>Tu Restaurante en Casa</title>
+  <link rel="icon" type="image/png" sizes="256x256" href="assets/images/logo.png">
+  <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
