Some components, a script file and Google Maps API
- Contact component added.
- Paydone component added.
- Team component added.
- Google Maps API added and implemented.

--- a/frontend/sample-project-phase4/src/index.html
+++ b/frontend/sample-project-phase4/src/index.html
@@ -25,6 +25,8 @@
 
   <script src="assets/js/bootstrap.min.js"></script>
 
+  <script src="assets/js/googlemapsapi.js"></script>
+
   <script src="assets/js/main.js"></script>
   <script src="assets/js/profile.js"></script>
 
